smooth scrolling added

--- a/css/general.css
+++ b/css/general.css
@@ -56,6 +56,8 @@ html {
   /* Precentage of user's browser font-size settings */
   font-size: 62.5%;
   overflow-x: hidden;
+  /* Works for chrome and firefox */
+  /* scroll-behavior: smooth; */
 }
 body {
   font-family: "Rubik", sans-serif;
