--- a/css/queries.css
+++ b/css/queries.css
@@ -102,6 +102,7 @@
   /* MBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
+    z-index: 9999;
   }
   .main-nav {
     background-color: rgba(255, 255, 255, 0.95);
