--- a/css/style.css
+++ b/css/style.css
@@ -15,22 +15,6 @@
 .logo {
   height: 2.2rem;
 }
-/* MOBILE */
-.btn-mobile-nav {
-  border: none;
-  background-color: none;
-  cursor: pointer;
-  display: none;
-}
-.icon-mobile-nav {
-  height: 4.8rem;
-  width: 4.8rem;
-  color: #333;
-  background-color: #fdf2e9;
-}
-.icon-mobile-nav[name="close-outline"] {
-  display: none;
-}
 
 /***********************/
 /* NAVIGATION */
@@ -67,6 +51,39 @@
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
 }
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background-color: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+  background-color: #fdf2e9;
+}
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+/* STICKY NAVIGATION */
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.97);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
 /***********************/
 /* HERO SECTION */
 /***********************/
